type: src, doc, config
1. Updated acknowledgements width settings in thesis-umich.cls
2. Added known issues section in README.md
3. Added package blindtext to test new acknoledgement settings in main.tex
4. Updated .gitignore to remove any tmp textpad files, namely .texpadtmp/

--- a/main.tex
+++ b/main.tex
@@ -103,7 +103,7 @@
 \usepackage{totcount}
 \usepackage{transparent}
 \usepackage{txfonts}
-
+\usepackage{blindtext}
 
 % Your commands here
 \newcommand{\ganttgroupc}[5][none]{\ganttgroup[group/.append style={draw=black, fill=#1}, group incomplete/.append style={draw=black,fill=#1!50}, progress=#2]{#3}{#4}{#5}}
